[package]
name = "nclean"
version = "0.1.1"
edition = "2021"
description = "A utility to clean filenames"
license = "MIT"
homepage = "https://github.com/Kl4rry/nclean"
repository = "https://github.com/Kl4rry/nclean"
documentation = "https://docs.rs/nclean"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
clap = { version = "3.0.12", features = ["derive"] }
dialoguer = "0.9.0"
